--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "json-server": "^0.14.0",
     "qs": "^6.5.2",
     "tinymce": "^4.7.13",
     "vue": "^2.5.16",
