--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.17.1",
     "json-server": "^0.14.0",
     "qs": "^6.5.2",
+    "sweetalert": "^2.1.0",
     "tinymce": "^4.7.13",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
