--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buildone": "eslint --fix ./src/assets/js/inspinia.js"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "axios": "^0.17.1",
     "json-server": "^0.14.0",
     "qs": "^6.5.2",
